styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;400&display=swap");

:root {
	--bg: #022129;
	--fr: #eafbf8;
	--sec: rgb(12, 118, 148);
	--secD: rgb(10, 100, 124);
	--dark: rgb(1, 22, 28);
	--darkM: rgba(0, 15, 19, 0.863);
	--darkS: rgb(13, 46, 55);
	--secBg: rgb(179, 230, 243);
	--frTrans: rgba(179, 230, 243, 0.911);
	--bgTrans: rgba(0, 15, 19, 0.711);
}

body {
	background-color: var(--bg);
	color: var(--fr);
	padding: 0;
	margin: 0;
}

* {
	font-family: "Inter", sans-serif;
}
a {
	color: var(--secBg);
	text-decoration: none;
}
a:hover {
	color: var(--secBg);
}
li {
	font-size: 1.5rem;
}
h5 {
	font-size: 1rem;
	margin: 0.5vw 0 2vw 0vw;
}
article {
	width: 50%;
}

p {
	font-size: 1.5rem;
}
button {
	cursor: pointer;
	background-color: var(--secD);
	color: var(--fr);
	border: none;
	font-size: 2rem;
	border-radius: 0.5vw;
	padding: 0.3vw;
	text-align: center;
}
button:hover {
	background-color: var(--sec);
	border-radius: 0.8vw;
	animation: buttonHover 0.5s;
}
@keyframes buttonHover {
	from {
		background-color: var(--secD);
		border-radius: 0.5vw;
	}
	to {
		background-color: var(--sec);
		border-radius: 0.8vw;
	}
}
.content {
	margin: 5vw 3vw;
}
.center {
	display: flex;
	justify-content: center;
	align-items: center;
}
.headerText {
	font-size: 2.3rem;
}
.no {
	animation: no 0.4s;
	opacity: 0;
	user-select: none;
}
@keyframes no {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}
.nav {
	white-space: nowrap;
	width: 100%;
	position: fixed;
	display: inline;
	top: 0%;
	z-index: 1;
	background-color: var(--dark);
	padding: 0.2vw;
}
.logoText {
	cursor: pointer;
	padding: 0;
	margin: 0;
}
.nav * {
	z-index: 2;
	display: inline;
}
.language {
	top: 0;
	font-size: 2rem;
	float: right;
	margin: 1vh 1vw;
	cursor: pointer;
}
.redirs {
	font-size: 2rem;
	float: right;
	margin: 1vh 0;
}
.redirs * {
	margin: 1vw;
	padding: 0.2vw;
}
.redirs *:hover {
	color: var(--frTrans);
	border-bottom: 0.6vh var(--secBg) solid;
	animation: fade 0.5s;
}
@keyframes fade {
	from {
		border-bottom: 0vh rgba(234, 251, 248, 0) solid;
	}
	to {
		border-bottom: 0.6vh var(--secBg) solid;
	}
}
.floatRight {
	float: right;
}
.projects {
	display: grid;
	grid-template-columns: repeat(3, auto);
	margin: 0 5vw;
}
.project {
	cursor: pointer;
	background-color: var(--dark);
	border-radius: 1vw;
	padding: 0vw;
	margin: 1vw;
}
.project:hover,
.smallBlog:hover {
	background-color: var(--darkM);
}

.showoffImage {
	border-radius: 2vw 2vw 0.1vw 0.1vw;
}
.projectlink {
	color: var(--fr);
	cursor: pointer;
}
.mapImg {
	border-radius: 2vw;
}

.footerPar {
	background-color: black;
	min-height: 100%;
	height: auto !important;
	margin: -1vh 0 0 0;
	padding: 0;
}
.footerImg {
	margin: 0;
	padding: 0 0 5vh 0;
	position: relative;
}
.player {
	cursor: pointer;
	position: relative;
	width: 5vw;
	height: 10vh;
	bottom: 17vh;
	left: 47%;
	z-index: 9;
}
.blackboxNav {
	background-color: black;
	left: 0;
	right: 0;
	height: 5vh;
	margin: -7vh 0 0 0;
}

.blackboxNav > h3 {
	display: flex;
	justify-content: right;
	padding: 1vh 1vw 0 0;
}
.smallImg {
	margin: 2%;
	width: 50%;
	border-radius: 0.1vw;
}
.intro {
	border-radius: 2vw;
	width: 40%;
	margin: 5vw auto;
}
.introText {
	box-sizing: border-box;
	text-align: center;
	margin: 2vw;
	display: block;
}
.introText > h1 {
	font-size: 3rem;
}
.introText > a {
	display: block;
	text-align: center;
	font-size: 1.8rem;
}
.bigProject {
	max-width: 85%;
	color: var(--secBg);
	border-radius: 2vw;
	padding: 1vw;
	text-align: center;
	margin: 0 0 2vh 0;
	/* the color switch */
	background: linear-gradient(to right, var(--darkS) 68%, var(--dark) 50%);
}
.bigProject:nth-child(odd) {
	color: var(--secBg);
	border-radius: 2vw;
	margin: 0 0 2vh 15vw;
	text-align: center;
	background: linear-gradient(to right, var(--dark) 28%, var(--darkS) 0%);
}
.bigProject:nth-child(odd) .desc {
	float: left;
	font-size: 3rem;
	margin: 2vw;
}

.desc {
	flex: 1 1 auto;
	font-size: 3rem;
	float: right;
	margin: 5vw;
}
.showoffBigImage {
	cursor: pointer;
	border-radius: 2vw 0vw 0vw 2vw;
	padding: 0vw;
	margin: 0;
	animation: zoomout 0.5s;
}
@keyframes zoomout {
	from {
		transform: scale(1.1);
	}
	to {
		transform: scale(1);
	}
}
.showoffBigImage:hover {
	animation: zoomin 1s;
	-ms-transform: scale(1.1); /* IE 9 */
	-webkit-transform: scale(1.1); /* Safari 3-8 */
	transform: scale(1.1);
}
@keyframes zoomin {
	from {
		transform: scale(1);
	}
	to {
		transform: scale(1.1);
	}
}
.scrolls {
	border-radius: 1vw;
	font-size: 3rem;
	position: absolute;
	z-index: 2;
	background-color: var(--bgTrans);
	color: var(--frTrans);
}
.scrolls:hover {
	font-size: 3.1rem;
	background-color: var(--bgTrans);
	color: var(--fr);
	animation: colorLighten 0.4s;
}
@keyframes colorLighten {
	from {
		color: var(--frTrans);
		border-radius: 1vw;
	}
	to {
		color: var(--fr);
		border-radius: 0.8;
	}
}
.scrollLeft {
	margin: 13% 0vw 0 0;
}

.scrollRight {
	margin: 13% 0 0 -2%;
}
.langModal {
	border-radius: 1vw;
	position: fixed;
	top: 7vh;
	right: 1%;
	background-color: var(--darkS);
	padding: 1vw;
}
.langModal > h2 {
	cursor: pointer;
	/* margin: 10vh 0; */
	color: var(--frTrans);
}

.langModal > h2:hover {
	color: var(--fr);
}
.blogLink {
	font-size: 1.5rem;
}
.blogs {
	max-width: 50%;
	margin: 2vw 0vw;
	display: grid;
	grid-template-columns: repeat(2, auto);
}
.smallBlogs {
	max-width: 90% !important;
	grid-template-columns: repeat(3, auto);
}
.blog {
	background-color: var(--dark);
	border-radius: 1vw;
	padding: 0vw !important;
	margin: 1vw;
}
.blogImg {
	cursor: pointer;
	margin: 0;
}
.smallBlog {
	cursor: pointer;
	background-color: var(--dark);
	border-radius: 2vw;
	padding: 0vw;
	margin: 1vw;
}
.smallBlogDesc {
	font-size: 3rem;
	margin: 0.5vw !important;
}
.social {
	margin: 1vw;
	background-color: transparent;
}
.social:hover {
	border-radius: 0;
	border-bottom: var(--frTrans) solid 0.2vw;
	background-color: transparent;
	animation: none !important;
}
.usernameSpeci {
	margin: 0%;
}
.smallSocials {
	display: flex;
	justify-self: left;
}
.smallSocial {
	padding: 0;
	filter: saturate(1) grayscale(1);
	margin: -15vh 0 0 0;
	background-color: transparent;
}
.smallSocial:hover {
	filter: saturate(1) grayscale(0.7);
	background-color: transparent;
	animation: none !important;
}
.recentBlogsHeader {
	cursor: pointer;
	font-size: 5rem;
	margin: 0;
}
.recentBlogsHeader:hover {
	color: var(--frTrans);
}
.smallProjectDesc {
	margin: 0 2vw;
}
.downloadButton {
	margin: 2vw;
}
.notFound {
	margin: 24.9vh 5vw;
}
.centerButton {
	margin: auto;
}
/* mobile view */
@media only screen and (max-width: 830px) {
	.intro {
		width: 90%;
		margin: 10vh auto auto auto;
	}

	.content {
		margin: 10vh 0;
	}
	.recentBlogsHeader {
		font-size: 2rem;
		margin: 2vw;
	}
	.projects,
	.smallBlogs {
		display: block;
		margin: 0 5vw;
	}
	.burgerMenu {
		cursor: pointer;
		margin: 0vh 10vw 0 0;
	}
}

